syntax = "proto3";
package data;

message FollowItem {
  int64 to_uid = 1;
  int64 create_time = 2;
}

message FollowList {
  repeated FollowItem list = 1;
}

message FollowKafka {
  int64 uid = 1;
  int64 to_uid = 2;
  int64 create_time = 3;
}

message RebuildKafka {
  int64 uid = 1;
  int64 last_id = 2;
}
